# texhs

./: .gitignore  README.md  texhs.cabal
app/: texhs.hs
src/Text/: Bib.hs  Doc.hs  TeX.hs
src/Text/Bib/: Filter.hs  Types.hs  Writer.hs
src/Text/Bib/Reader/: BibTeX.hs
src/Text/Bib/Reader/BibTeX/: Inheritance.hs  Reference.hs  Structure.hs
src/Text/Doc/: Section.hs  Types.hs
src/Text/Doc/Filter/: Bib.hs  DeriveSection.hs  MultiFile.hs
src/Text/Doc/Reader/: TeX.hs
src/Text/Doc/Writer/: Core.hs  Epub.hs  Html.hs  Xml.hs
src/Text/TeX/: Context.hs  Filter.hs  Lexer.hs  Parser.hs
src/Text/TeX/Context/: Types.hs  Walk.hs
src/Text/TeX/Filter/: Plain.hs  Primitive.hs
src/Text/TeX/Lexer/: Catcode.hs  Macro.hs  Token.hs  TokenParser.hs
src/Text/TeX/Lexer/TokenParser/: Basic.hs  Core.hs  Execution.hs  Expansion.hs  State.hs
src/Text/TeX/Parser/: Basic.hs  Core.hs  Types.hs
src/executable/: texhs.hs
test/: Spec.hs
test/Text/: BibSpec.hs  TeXSpec.hs
test/Text/Bib/: WriterSpec.hs
test/Text/Doc/: TypesSpec.hs
test/Text/Doc/Filter/: MultiFileSpec.hs
test/Text/Doc/Reader/: TeXSpec.hs
test/Text/Doc/Writer/: HtmlSpec.hs  XmlSpec.hs
test/Text/TeX/: LexerSpec.hs  ParserSpec.hs
tests/: testbibtex.hs  testdocreadertex.hs  testlexer.hs  testtex.hs  testtexlexer.hs  testtexparser.hs
