name:                texhs
version:             0.1.0.0
synopsis:            (La)TeX Parser
description:         texhs is a Haskell library for parsing TeX and LaTeX documents
                     with support for category code management and the main macro
                     systems of TeX, LaTeX2e and LaTeX3 (xparse).
homepage:            https://github.com/synsem/texhs
license:             GPL-3
license-file:        LICENSE
author:              Mathias Schenner
maintainer:          mathias.schenner@langsci-press.org
copyright:           (c) Mathias Schenner 2015,
                     (c) Language Science Press 2015.
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.4.1, GHC == 7.8.4, GHC == 7.10.1

library
  hs-source-dirs:      src/library
  exposed-modules:     Text.TeX,
                       Text.TeX.Lexer,
                       Text.TeX.Lexer.Catcode,
                       Text.TeX.Lexer.Macro,
                       Text.TeX.Lexer.Token,
                       Text.TeX.Lexer.TokenParser,
                       Text.TeX.Lexer.TokenParser.Basic,
                       Text.TeX.Lexer.TokenParser.Core,
                       Text.TeX.Lexer.TokenParser.Execution,
                       Text.TeX.Lexer.TokenParser.Expansion,
                       Text.TeX.Lexer.TokenParser.State,
                       Text.TeX.Parser,
                       Text.TeX.Parser.Basic,
                       Text.TeX.Parser.Core,
                       Text.TeX.Parser.Types
  build-depends:       base         >=4.5 && <4.9,
                       directory    >=1.2 && <1.3,
                       filepath     >=1.4 && <1.5,
                       parsec       >=3.1 && <3.2,
                       time         >=1.5 && <1.6,
                       transformers >=0.3 && <0.5
  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wall

executable texhs
  hs-source-dirs:    src/executable
  main-is:           texhs.hs
  build-depends:     base   >=4.5 && <4.9,
                     texhs  >=0.1 && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite tex
  hs-source-dirs:    tests
  type:              exitcode-stdio-1.0
  main-is:           testtex.hs
  build-depends:     base   >=4.5 && <4.9,
                     HUnit  >=1.2 && <1.3,
                     texhs  >=0.1 && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite texlexer
  hs-source-dirs:    tests
  type:              exitcode-stdio-1.0
  main-is:           testtexlexer.hs
  build-depends:     base   >=4.5 && <4.9,
                     HUnit  >=1.2 && <1.3,
                     texhs  >=0.1 && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite texparser
  hs-source-dirs:    tests
  type:              exitcode-stdio-1.0
  main-is:           testtexparser.hs
  build-depends:     base   >=4.5 && <4.9,
                     HUnit  >=1.2 && <1.3,
                     texhs  >=0.1 && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall
