name:                texhs
version:             0.1.0.0
synopsis:            TeX and LaTeX Parser
description:         texhs is a Haskell library for parsing TeX and LaTeX documents
                     with support for category code management and the main macro
                     systems of TeX, LaTeX2e and LaTeX3 (xparse).
homepage:            https://github.com/synsem/texhs
license:             GPL-3
license-file:        LICENSE
author:              Mathias Schenner
maintainer:          mathias.schenner@langsci-press.org
copyright:           2015-2016 Mathias Schenner,
                     2015-2016 Language Science Press.
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3,
                     GHC == 7.6.3

library
  hs-source-dirs:      src
  exposed-modules:     Text.TeX
                       Text.TeX.Context
                       Text.TeX.Context.Types
                       Text.TeX.Context.Walk
                       Text.TeX.Filter
                       Text.TeX.Filter.Plain
                       Text.TeX.Filter.Primitive
                       Text.TeX.Lexer
                       Text.TeX.Lexer.Catcode
                       Text.TeX.Lexer.Macro
                       Text.TeX.Lexer.Token
                       Text.TeX.Lexer.TokenParser
                       Text.TeX.Lexer.TokenParser.Basic
                       Text.TeX.Lexer.TokenParser.Core
                       Text.TeX.Lexer.TokenParser.Execution
                       Text.TeX.Lexer.TokenParser.Expansion
                       Text.TeX.Lexer.TokenParser.State
                       Text.TeX.Parser
                       Text.TeX.Parser.Basic
                       Text.TeX.Parser.Core
                       Text.TeX.Parser.Types
                       Text.Bib
                       Text.Bib.Filter
                       Text.Bib.Types
                       Text.Bib.Writer
                       Text.Bib.Reader.BibTeX
                       Text.Bib.Reader.BibTeX.Inheritance
                       Text.Bib.Reader.BibTeX.Reference
                       Text.Bib.Reader.BibTeX.Structure
                       Text.Doc
                       Text.Doc.Types
                       Text.Doc.Section
                       Text.Doc.Reader.TeX
                       Text.Doc.Filter.Bib
                       Text.Doc.Filter.DeriveSection
                       Text.Doc.Filter.MultiFile
                       Text.Doc.Writer.Core
                       Text.Doc.Writer.Html
                       Text.Doc.Writer.Xml
  build-depends:       base         >=4.5 && <4.9,
                       blaze-html   >=0.8 && <0.9,
                       blaze-markup >=0.7 && <0.8,
                       containers   >=0.5 && <0.6,
                       directory    >=1.2 && <1.3,
                       filepath     >=1.3 && <1.5,
                       parsec       >=3.1 && <3.2,
                       text         >=1.0 && <1.3,
                       time         >=1.5 && <1.7,
                       transformers >=0.4 && <0.5
  default-language:    Haskell2010
  -- extensions used in all modules:
  default-extensions:
  -- extensions used in some modules (Cabal >=1.10)
  -- (see LANGUAGE pragmas in file headers):
  other-extensions:    CPP
                       OverloadedStrings
                       GeneralizedNewtypeDeriving
                       TypeSynonymInstances
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
  ghc-options:         -Wall

executable texhs
  hs-source-dirs:    app
  main-is:           texhs.hs
  build-depends:     base   >=4.5 && <4.9,
                     texhs  >=0.1 && <0.2,
                     text   >=1.0 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite texhs-test
  hs-source-dirs:    test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  other-modules:     Text.BibSpec
                     Text.Bib.WriterSpec
                     Text.Doc.TypesSpec
                     Text.Doc.Reader.TeXSpec
                     Text.Doc.Filter.MultiFileSpec
                     Text.Doc.Writer.HtmlSpec
                     Text.Doc.Writer.XmlSpec
                     Text.TeX.LexerSpec
                     Text.TeX.ParserSpec
                     Text.TeXSpec
  build-depends:     base                 >=4.5 && <4.9,
                     containers           >=0.5 && <0.6,
                     HUnit                >=1.2 && <1.4,
                     test-framework       >=0.8 && <0.9,
                     test-framework-hunit >=0.3 && <0.4,
                     texhs                >=0.1 && <0.2,
                     text                 >=1.0 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
